--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -1,6 +1,6 @@
 # Secret key
 # ~~~~~
-play.crypto.secret = "{YOUR_CRYPTO_SECRET}"
+play.http.secret.key = "{YOUR_CRYPTO_SECRET}"
 
 # The application languages
 # ~~~~~
@@ -10,6 +10,11 @@ play.i18n.langs = ["en"]
 play.filters.cors {
   pathPrefixes = ["/api"]
   preflightMaxAge = 3 days
+}
+
+play.filters.headers {
+  frameOptions = "SAMEORIGIN"
+  contentSecurityPolicy = "connect-src 'self'"
 }
 
 # Trusted Proxy Configuration, important for docker deployment behind load balancer
