--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -6,17 +6,33 @@ play.http.secret.key = "{YOUR_CRYPTO_SECRET}"
 # ~~~~~
 play.i18n.langs = ["en"]
 
-# CORS Filter
-play.filters.cors {
-  pathPrefixes = ["/api"]
-  preflightMaxAge = 3 days
-}
-
-play.filters.headers {
-  frameOptions = "SAMEORIGIN"
-  contentSecurityPolicy = "connect-src 'self'"
-}
 
 # Trusted Proxy Configuration, important for docker deployment behind load balancer
 play.http.forwarded.trustedProxies = ["0.0.0.0/0", "::/0"]
 play.http.parser.maxDiskBuffer = 100M
+
+play.filters {
+  ## CORS filter configuration
+  # https://www.playframework.com/documentation/latest/CorsFilter
+  # ~~~~~
+  # CORS is a protocol that allows web applications to make requests from the browser
+  # across different domains.
+  # NOTE: You MUST apply the CORS configuration before the CSRF filter, as CSRF has
+  # dependencies on CORS settings.
+  cors {
+    # Filter paths by a whitelist of path prefixes
+    pathPrefixes = ["/api/"]
+  }
+
+  headers {
+    frameOptions = "SAMEORIGIN"
+    contentSecurityPolicy = "connect-src 'self'"
+  }
+
+  csrf.header.bypassHeaders {
+    X-Requested-With = "*"
+    Csrf-Token = "nocheck"
+  }
+
+
+}
